--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-I9BPSB6\\NPSQL;Database=DEMO;User ID=sa;Password=love123;MultipleActiveResultSets=true"
+  }
 }
